# rostel

./: .gitignore  README.md  data.xlsx  data_processing.py  main.py  parser.py  pyproject.toml  requirements.txt
